# todo-service

./: README.md  pyproject.toml
src/: main.py
src/api/: pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: 0e78e82f01b7_initial_revision.py
src/api/applicaiton/services/: task_service.py
src/api/domain/: task.py  users.py
src/api/infrastructure/: container.py
src/api/infrastructure/api/: setup.py
src/api/infrastructure/api/auth/: keycloak_auth.py
src/api/infrastructure/api/controllers/: auth_contoller.py  task_controller.py
src/api/infrastructure/providers/: postgres_provider.py
src/api/infrastructure/repositories/: task_repository.py
src/applicaiton/: task_service.py
src/applicaiton/services/: task_service.py
src/domain/: task.py
src/infrastructure/: container.py
src/infrastructure/api/controllers/: task_controller.py
src/infrastructure/providers/: postgres_provider.py
src/infrastructure/repositories/: task_repository.py
src/vue-app/: index.html  package-lock.json  package.json
src/vue-app/src/: App.vue
src/vue-app/src/assets/: base.scss  styles.scss  variables.scss
src/vue-app/src/components/: KanbanBoard.vue  KanbanCard.vue  Login.vue  Navbar.vue  Register.vue  (+6 more)
todo-service-ops/: docker-compose.keycloak.yml  docker-compose.postgres.yml  init-db.sh
vue-app/: package-lock.json  package.json
vue-app/src/: App.vue
vue-app/src/assets/: base.scss  styles.scss  task_page_style.scss  variables.scss
vue-app/src/components/: TaskCard.vue  TaskForm.vue  TaskList.vue  TaskPage.vue
vue-app/src/models/: task.ts
(+21 files in other folders)
