[project]
name = "todo-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vyacheslav Atkin", email = "avea22r225@student.bmstu.ru"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
